--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,9 +56,9 @@
             <!--Tab#1 content - overall strength calculator-->
             <div id="tab1" class="tab-pane centered fade"
                  th:classappend="${showCalc != null}? 'show active'">
-                <br/>
+                <br>
                 <h3 class="tab-title">Overall Strength</h3>
-                <br/>
+                <br>
                 <div class="overall-strength">
                     <div class="overall-strength-weight">
                         <label class="bigger-label" for="squat-weight-slider">
@@ -67,7 +67,7 @@
                                min="1" max="300" value="150"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('squat-weight',this.value,
-                               'squat-weight','squat-reps','squat-max');"><br/>
+                               'squat-weight','squat-reps','squat-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="squat-reps-slider">Reps</label>
@@ -75,7 +75,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('squat-reps',this.value,
-                               'squat-weight','squat-reps','squat-max');"><br/>
+                               'squat-weight','squat-reps','squat-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -112,7 +112,7 @@
                                min="1" max="250" value="125"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('bench-weight',
-                               this.value,'bench-weight','bench-reps','bench-max');"><br/>
+                               this.value,'bench-weight','bench-reps','bench-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="bench-reps-slider">Reps</label>
@@ -120,7 +120,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('bench-reps',
-                               this.value,'bench-weight','bench-reps','bench-max');"><br/>
+                               this.value,'bench-weight','bench-reps','bench-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -158,7 +158,7 @@
                                value="175"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('deadlift-weight',this.value,
-                               'deadlift-weight','deadlift-reps','deadlift-max');"><br/>
+                               'deadlift-weight','deadlift-reps','deadlift-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="deadlift-reps-slider">Reps</label>
@@ -167,7 +167,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('deadlift-reps',this.value,
-                               'deadlift-weight','deadlift-reps','deadlift-max');"><br/>
+                               'deadlift-weight','deadlift-reps','deadlift-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -205,7 +205,7 @@
                                value="75"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('military-weight',this.value,
-                               'military-weight','military-reps','military-max');"><br/>
+                               'military-weight','military-reps','military-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="military-reps-slider">Reps</label>
@@ -214,7 +214,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('military-reps',this.value,
-                               'military-weight','military-reps','military-max');"><br/>
+                               'military-weight','military-reps','military-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -251,7 +251,7 @@
                                max="200" value="100"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('row-weight',this.value,
-                               'row-weight','row-reps','row-max');"><br/>
+                               'row-weight','row-reps','row-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="row-reps-slider">Reps</label>
@@ -259,7 +259,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('row-reps',
-                               this.value,'row-weight','row-reps','row-max');"><br/>
+                               this.value,'row-weight','row-reps','row-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -295,7 +295,7 @@
                                min="1" max="150" value="75"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('pullup-weight',
-                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br/>
+                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="pullup-reps-slider">Reps</label>
@@ -304,7 +304,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('pullup-reps',
-                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br/>
+                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -337,7 +337,7 @@
 
             <!--Tab#2 content - 1 rep max and percentages calculator-->
             <div id="tab2" class="tab-pane centered fade">
-                <br/>
+                <br>
                 <h3 class="tab-title">1 Rep Max Calculator</h3>
                 <br>
 
@@ -346,22 +346,22 @@
                     <label class="bigger-label" for="weight">Weight lifted</label>
                     <input name="weight" id="weight" type="range" min="1" max="200" value="100"
                            class="slider" step="0.5"
-                           oninput="update('weight-text',this.value);"><br/>
+                           oninput="update('weight-text',this.value);"><br>
                     <label for="weight-text"></label><input type="text" id="weight-text" value="100"
                                                             oninput="update('weight',this.value);">
                 </div>
-                <br/>
+                <br>
 
                 <!--Number of reps performed slider-->
                 <div class="one-rep-max-inputs">
                     <label class="bigger-label" for="reps">Number of reps</label>
                     <input name="reps" id="reps" type="range" min="1" max="19" value="10"
                            class="slider" step="1"
-                           oninput="update('reps-text',this.value);"><br/>
+                           oninput="update('reps-text',this.value);"><br>
                     <label for="reps-text"></label><input type="text" id="reps-text" value="10"
                                                           oninput="update('reps',this.value);">
                 </div>
-                <br/>
+                <br>
                 <div>
                     <label class="bigger-label" for="result">1 Rep Max:</label>
                     <input id="result" type="text" value="" readonly>
@@ -372,7 +372,7 @@
 
                 <!--Percentages calculator-->
                 <div>
-                    <br/><br/>
+                    <br><br>
                     <h3 class="tab-title">Percentages Calculator</h3>
                     <br>
                     <table id="percentages">
@@ -584,9 +584,9 @@
 
             <!--Tab#3 content-->
             <div id="tab3" class="tab-pane centered fade">
-                <br/>
+                <br>
                 <h3 class="tab-title">Calculator #2</h3>
-                <br/>
+                <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet ante elit,
                     ac congue eros viverra
                     id. Phasellus quis sagittis urna. Sed in justo est. Maecenas nulla nibh,
