Add and edit main.js documentation

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -254,7 +254,7 @@
     <div>
         <div>
             <br><label for="title">Workout title: </label>
-            <span contenteditable="true" class="my-input" id="title"></span>
+            <span contenteditable="true" class="my-input" id="title" data-set="title"></span>
             <button class='my-button add-note' title="Add workout note"
                     onclick='addNote();'>&nbsp
             </button>
