--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -368,7 +368,7 @@ button:active, input[type=submit]:active, .my-button:active {
     right: 0;
     margin-top: 1em;
     margin-right: 0.5em;
-    text-align: right;
+    text-align: center;
 }
 
 #workouts-list {
