Add delete workout feature

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -235,7 +235,8 @@
         <button class="my-button show-on-add" onclick="saveWorkout(workout);" type="button">
             Save</button>
         <button class="my-button show-on-edit" onclick="" type="button">Update</button>
-        <button class="my-button show-on-edit" onclick="" type="button">Delete</button>
+        <button class="my-button show-on-edit" onclick="deleteWorkout()" type="button">
+            Delete</button>
         <button class="my-button" onclick="location.href='/wl/user';" type="button">Cancel</button>
     </div>
 
@@ -272,7 +273,8 @@
         <button class="my-button show-on-add" onclick="saveWorkout(workout);" type="button">
             Save</button>
         <button class="my-button show-on-edit" onclick="" type="button">Update</button>
-        <button class="my-button show-on-edit" onclick="" type="button">Delete</button>
+        <button class="my-button show-on-edit" onclick="deleteWorkout()" type="button">
+            Delete</button>
         <button class="my-button" onclick="location.href='/wl/user';" type="button">Cancel</button>
     </div>
     <script>
