--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -258,7 +258,7 @@
             <br><label for="title">Workout title: </label>
             <span contenteditable="true" class="my-input" id="title" data-set="title"></span>
             <button class='my-button add-note' title="Add workout note"
-                    onclick='addNote();'>&nbsp
+                    onclick='addNote(0, null);'>&nbsp
             </button>
         </div>
         <div id="notes"></div>
