Finish remove workout elements feature

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -290,6 +290,7 @@
             addWorkout();
         }
     </script>
+<!--    <div id="fresh-copy" th:replace="fragments.html :: user-panel-workout-details"></div>-->
 </div>
 </body>
 </html>
